--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL = "mongodb://127.0.0.1:27017/auth"
+MONGODB_URL = "mongodb+srv://deepak_singh_5219:singhdeepak@cluster0.r3b1b.mongodb.net/test"
 PORT = 3000
